--- a/Chirp_test.ipynb
+++ b/Chirp_test.ipynb
@@ -2,15 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "fe2e147e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\400_AWT\\400_setup_python\\Tabor Library\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
     "# please change the source path appropriately\n",
-    "srcpath = os.path.realpath('C:/300_control/300_python/SourceFiles/Tabor Library/')\n",
+    "srcpath = os.path.realpath('D:/400_AWT/400_setup_python/Tabor Library/')\n",
     "print(srcpath)\n",
     "sys.path.append(srcpath)\n",
     "from tevisainst import TEVisaInst\n",
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "6b5842d0",
    "metadata": {},
    "outputs": [],
@@ -49,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "7122abc7",
    "metadata": {},
    "outputs": [],
@@ -73,14 +81,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "409b7063",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing AWG...\n",
+      "Load TEProteus.dll from : C:\\Windows\\system32\\TEProteus.dll\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"Initializing AWG...\")\n",
     "sid = 8\n",
-    "ch = 1\n",
+    "ch = 3\n",
     "admin = TepAdmin() #required to control PXI module\n",
     "inst = admin.open_instrument(slot_id=sid)\n",
     "inst.send_scpi_cmd(\"*CLS\")\n",
@@ -95,13 +122,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "25fb1e97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading segment: 1, channel: 3\n",
+      "Downloading segment: 2, channel: 3\n",
+      "NONE\n",
+      "NONE\n",
+      "DUC\n"
+     ]
+    }
+   ],
    "source": [
     "sampleRateDAC = 9e9\n",
-    "awg_center_freq = 3e9\n",
+    "awg_center_freq = 3e6\n",
     "awg_bw_freq = 100\n",
     "sweep_freq = 1000\n",
     "srs_freq = 1e6\n",
@@ -149,10 +188,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "f3954edf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generate task table\n",
+      "20000\n",
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# FIRST JUST REPEAT 1 segment and see what happens\n",
     "print(\"generate task table\")\n",
@@ -174,10 +233,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3b9b1e26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "208, syntax error in scpi\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TURN ON OUTPUT WITH NCO FREQUENCY SET AS CARRIER FREQUENCY\n",
     "# maybe need to create a image frequency\n",
@@ -191,7 +268,7 @@
     "inst.send_scpi_cmd(':SOUR:FUNC:MODE TASK')\n",
     "inst.send_scpi_cmd(':OUTP ON')\n",
     "resp = inst.send_scpi_query(':SYST:ERR?')\n",
-    "assert int(resp.split(',')[0]) == 0\n",
+    "print(resp)\n",
     "inst.send_scpi_cmd('*TRG')"
    ]
   }
@@ -203,7 +280,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.7"
   }
  },
